# solutions

./: .gitattributes  .gitignore  COPYING  ChangeLog  README.md  makefile
4kyi/: adding_big_numbers.lua  bf_sort_string.bf  human_readable_duration_foramt.py  range_extraction.py  snail.py  so_many_permutations.py  sum_stringg_as_numbers.lua
5kyi/: calculating_running_total.sql  chain_adding_function.py  directions_reduction.sh  hashtag_generator.lua  human_readable_time.lua  human_readable_time.py  is_my_friend_cheating.sh  not_very_secure.py  perimeter_of_squares_in_a_rectangle.sh  relational_division_find_all_movies_two_actors_cast_in_together.sql  simple_pig_latin.py  weight_for_weight.lua
6kyi/: array_diff.py  counting_duplicates.sh  create_phone_number.py  duplicate_encoder.py  find_the_odd_int.py  find_the_pairity_outlier.lua  mexican_wave.lua  multiples_of_3_or_5.py  multiples_of_3_or_5.sh  playing_with_digits.sh  replace_with_alphabet_position.py  rule_of_divisibility_by_13  sum_of_digits_digital_root.py  who_likes_it.py
78kyi:bf/: bf_basics_repeat_the_input.bf  counting_sheep.bf  double_char.bf  insert_asterisks.bf
78kyi:nasm/: even_or_odd.asm
codeforces/: 1030a.c  110a.c  116a.c  118a.c  122a.c  1352a.c  1352b.c  1352c.c  160a.c  167a.c  1873a.c  1873b.c  1873c.c  236.c  266a.c  271a.c  41a.c  467a.c  486a.c  546a.c  58a.py  59a.c  617a.c  677a.c  734a.c  791a.c  96a.c  977a.c  TODO  main.c  (+4 more)
codeforces/266a/: .gitignore  266a.c  ChangeLog  Makefile.am  README  configure.ac
codeforces/467a/: .gitignore  ChangeLog  Makefile.am  README  configure.ac
(+236 files in other folders)
